[package]
name = "many-cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
fmerk = { git = "https://github.com/hansl/fmerk" }
hex = "0.4.3"
many = { git = "ssh://git@github.com/l-1-labs/many-rs.git" }
many-client = { git = "ssh://git@github.com/l-1-labs/many-rs.git" }
minicbor = { version = "0.12.0", features = ["derive", "std"] }
num-bigint = { version = "0.4.3", features = ["serde"] }
num_cpus = "1.13"
serde = "1.0"
serde_json = "1.0"
tokio-cron-scheduler = { version = "0.5.0", features = ["signal"] }
tokio = { version = "1.17.0", features = [ "full" ] }
tracing = "0.1.28"
tracing-subscriber = "0.3"

[dev-dependencies]
tempdir = "0.3"