[package]
name = "many-cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor-diag = "0.1"
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
many = { git = "https://github.com/l-1-labs/many-rs.git", rev="4b642446c83cc5d541773fdd2c343733c803900b" }
many-client = { git = "https://github.com/l-1-labs/many-rs.git", rev="4b642446c83cc5d541773fdd2c343733c803900b" }
minicbor = { version = "0.12.0", features = ["derive", "std"] }
num-bigint = { version = "0.4.3", features = ["serde"] }
once_cell = "1.10"
serde = "1.0"
serde_json = "1.0"
tokio-cron-scheduler = { version = "0.5.0", features = ["signal"] }
tokio = { version = "1.17.0", features = [ "full" ] }
tracing = "0.1.28"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"

# [patch."https://github.com/l-1-labs/many-rs.git"]
# many = { path = "../many-rs/src/many" }
# many-client = { path = "../many-rs/src/many-client" }